# cg

./: README
examples/convex/: ccw_contour_convex.cpp
examples/convex_hull/: CMakeLists.txt  convex_hull.cpp  graham_hull.cpp
examples/operations/: CMakeLists.txt  ccw_convex_contains_point.cpp  douglas_peucker.cpp  is_convex.cpp  rectangle_contains_point.cpp  rectangle_intersects_segment.cpp  segment_contains_point.cpp  segment_intersects_segment.cpp  segments_intersect.cpp  triangle_intersects_segment.cpp
examples/orientation/: orientation_contour_ccw.cpp
include/cg/common/: intersect.h  range.h
include/cg/convex_hull/: andrew.h  graham.h  jarvis.h  quick_hull.h
include/cg/io/: io_utils.h
include/cg/operations/: belongings.h  convex.h  douglas_peucker.h  intersections.h  orientation.h  segment_intersect.h
include/cg/operations/contains/: contour_point.h  rectangle_point.h  segment_point.h  triangle_point.h
include/cg/operations/has_intersection/: rectangle_segment.h  segment_segment.h
include/cg/operations/intersection/: segment_segment.h
include/cg/operations/orientation/: contour_orientation.h  points_orientation.h
include/cg/primitives/: contour.h  point.h  segment.h  triangle.h
include/cg/visualization/: draw_util.h  viewer.h  viewer_adapter.h
tests/: CMakeLists.txt  belongings.cpp  contains.cpp  convex.cpp  convex_hull.cpp  douglas_peucker.cpp  dynamic_convex_hull.cpp  has_intersection.cpp  intersect.cpp  intersect_slow.h  intersection.cpp  intersections.cpp  orientation.cpp  random_utils.h  segment_intersect.cpp  test.h
